--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -988,7 +988,9 @@
 .group-health-select-ped {
   margin: 0 0 50px 0;
 }
-
+.MuiDialogActions-root{
+  text-align: right;
+}
 .group-health-final-summary {
   .member-tile {
       display: flex;
