--- a/react_webviews/src/gold/components/Style.scss
+++ b/react_webviews/src/gold/components/Style.scss
@@ -626,9 +626,9 @@ img.gold-offer-slide-img {
   }
 
   .top-content {
-    color: #0a1d32;
+    color: #0A1D32;
     font-size: 16px;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 1.6;
   }
 
