added ticket queries

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1578,6 +1578,7 @@ input#pan {
   border-bottom: 1px solid;
   color: var(--secondary);
   cursor: pointer;
+  width: 74px;
 }
 
 .header-status {
