--- a/react_webviews/src/help_support_v2/Style.scss
+++ b/react_webviews/src/help_support_v2/Style.scss
@@ -240,6 +240,7 @@
       text-align: justify !important;
 
       span {
+        font-size: 15px !important;
         font-family: inherit !important;
       }
     }
