--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1132,10 +1132,11 @@ body[data-device="mobile"] {
   min-height: 51px !important;
   border: none !important;
   box-shadow: none !important;
-  border-bottom: 1px solid #4F2DA7 !important;
+  // border-bottom: 1px solid #4F2DA7 !important;
   border-radius: 0px !important;
 }
 
+.css-1pahdxg-control:hover{border-color:  greenyellow   }
 
 .css-9gakcf-option{
  background-color: #EEEEEE !important;
