--- a/react_webviews/src/help_support_v2/Style.scss
+++ b/react_webviews/src/help_support_v2/Style.scss
@@ -113,6 +113,10 @@
     cursor: pointer;
   }
 
+  .category:hover {
+    background-color: var(--highlight);
+  }
+
   .sub-title {
     font-size: 13px;
     color: #878787;
@@ -344,6 +348,19 @@
 
 .help-tickets {
   line-height: 20px;
+
+  .fade-in {
+    animation: fadeIn ease 0.5s;
+  }
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 
   .ticket {
     cursor: pointer;
@@ -635,6 +652,16 @@
       .contact {
         font-size: 13px;
       }
+    }
+
+    .category:hover {
+      background-color: white;
+    }
+  }
+
+  .help-questions {
+    .category:hover {
+      background-color: white;
     }
   }
 
