--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -842,10 +842,10 @@
 
 .kyc-show-aadhar .action-btn {
   background-color: var(--secondary);
-  margin-top: 10px;
+  margin-top: 15px;
   text-align: center;
   text-transform: uppercase;
-  padding: 5px 15px;
+  padding: 13px;
   font-weight: bold;
   min-width: 140px;
   display: block;
@@ -854,6 +854,11 @@
     text-transform: uppercase;
     color: white;
   }
+}
+
+.kyc-show-aadhar .action-btn:hover {
+  background-color: var(--secondary);
+  color: white;
 }
 
 .kyc-journey .kyc-pj-content {
@@ -1942,6 +1947,7 @@
     font-size: 16px;
     letter-spacing: 1px;
     font-weight: bold;
+    padding: 7px 0;
   }
 
   .footer .outlined {
@@ -1971,6 +1977,12 @@
 
 .kyc-dl-aadhaar-dialog .dialog-actions {
   margin-top: 25px;
+
+  button {
+    padding: 14px 0;
+    font-weight: 700;
+    letter-spacing: 1px;
+  }
 }
 
 .ipv-know-more-dialog {
