--- a/react_webviews/src/help_support_v2/Style.scss
+++ b/react_webviews/src/help_support_v2/Style.scss
@@ -271,7 +271,7 @@
   }
 
   .hr {
-    border-bottom: 1px solid #dadada !important;
+    border: 1px solid #dadada !important;
     margin: 0 -20px;
   }
 
