--- a/react_webviews/src/help_support_v2/Style.scss
+++ b/react_webviews/src/help_support_v2/Style.scss
@@ -271,7 +271,7 @@
   }
 
   .hr {
-    border: 1px solid #dadada !important;
+    border-top: 1px solid #dadada !important;
     margin: 0 -20px;
   }
 
@@ -295,7 +295,7 @@
 
 .help-queries {
   margin: 0 -20px;
-  height: 100%;
+  max-height: 85vh;
 
   .nav-bar {
     height: 100%;
@@ -348,6 +348,10 @@
 
 .help-tickets {
   line-height: 20px;
+  height: 85vh;
+  overflow: scroll;
+  margin: 0 -22px;
+  padding: 0 20px 60px;
 
   .fade-in {
     animation: fadeIn ease 0.5s;
@@ -360,6 +364,28 @@
     100% {
       opacity: 1;
     }
+  }
+
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+  }
+
+  ::-webkit-scrollbar:vertical {
+    width: 3px;
+  }
+
+  ::-webkit-scrollbar:horizontal {
+    height: 3px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #d8d8d8;
+    border-radius: 2px;
+  }
+
+  ::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: #ffffff;
   }
 
   .ticket {
