label default color change + css fix

--- a/react_webviews/src/common/ui/style.css
+++ b/react_webviews/src/common/ui/style.css
@@ -140,7 +140,7 @@
   min-height: 1em;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   line-height: 1em;
-  color: #f44336;
+  color: #D0021B;
   position: relative;
   top: 5px;
 }
