--- a/react_webviews/src/group_insurance/products/term_insurance/Style.css
+++ b/react_webviews/src/group_insurance/products/term_insurance/Style.css
@@ -176,7 +176,7 @@
     min-height: 1em;
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
     line-height: 1em;
-    color: #f44336;
+    color: #D0021B;
     position: relative;
     top: 5px;
   }
