--- a/react_webviews/src/help_support_v2/Style.scss
+++ b/react_webviews/src/help_support_v2/Style.scss
@@ -401,6 +401,15 @@
     width: 100%;
   }
 
+  .leftTag {
+    margin-right: 10%;
+  }
+
+  .rightTag {
+    text-align: -webkit-right;
+    margin-left: 20%;
+  }
+
   .chat-box {
     background: #f7f6f6;
     width: fit-content;
