load bank page dropdown change

--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1315,6 +1315,7 @@ body[data-device="mobile"] {
     padding-left:  10px !important;
     color: #161A2E  !important;
     font-size: 13px  !important;
+    padding-top: 14px !important;
     line-height: 21px  !important;
   }
 
