adress dropdown issue fix

--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -987,7 +987,7 @@ body[data-device="mobile"] {
 
 .react-dropdown-select{
   background: rgba(238, 238, 238, 0.3) !important;
-  min-height: 51px !important;
+  min-height: 52px !important;
   border: none;
 }
 
@@ -1136,13 +1136,13 @@ body[data-device="mobile"] {
 
 .css-yk16xz-control{
   background: rgba(238, 238, 238, 0.3) !important;
-  min-height: 51px !important;
+  min-height: 52px !important;
   border: none !important;
 }
 
 .css-1pahdxg-control{  // for the Box DrodownBox hover
   background: rgba(238, 238, 238, 0.3) !important;
-  min-height: 51px !important;
+  min-height: 52px !important;
   border: none !important;
   box-shadow: none !important;
   // border-bottom: 1px solid #4F2DA7 !important;
@@ -1190,6 +1190,7 @@ body[data-device="mobile"] {
 
 .css-1uccc91-singleValue{
   margin-top: 2px !important;
+  color: #161A2E !important;
   margin-left: 0px !important;
   font-size: 13px;
   line-height: 21px;
@@ -1315,6 +1316,7 @@ body[data-device="mobile"] {
     padding-left:  10px !important;
     color: #161A2E  !important;
     font-size: 13px  !important;
+    padding-top: 14px !important;
     line-height: 21px  !important;
   }
 
