--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1355,6 +1355,9 @@ body[data-device="mobile"] {
   .MuiInputLabel-animated{
     top: -8px !important;
     left:10px !important;
+  }
+  
+  label{
     font-size: 13px !important;
   }
   
