--- a/react_webviews/src/help_support_v2/Style.scss
+++ b/react_webviews/src/help_support_v2/Style.scss
@@ -310,7 +310,6 @@
     .img {
       width: 100%;
       margin-top: 30px;
-      margin-bottom: 25px;
     }
 
     .no-tickets {
@@ -626,7 +625,7 @@
   .ticket-id {
     font-size: 13px;
     font-weight: 600;
-    color: #4A4A4A;
+    color: #4a4a4a;
   }
 }
 
