--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1163,6 +1163,7 @@ body[data-device="mobile"] {
   
   .MuiInput-input{
     padding-left:  10px !important;
+    margin-left: 1px !important;
     color: #161A2E  !important;
     font-size: 13px  !important;
     padding-top: 15px !important;
@@ -1203,7 +1204,7 @@ body[data-device="mobile"] {
   
   .MuiInputLabel-animated{
     top: -8px !important;
-    left: 12px !important;
+    left: 11px !important;
   }
   
   label{
