--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1086,7 +1086,7 @@ body[data-device="mobile"] {
 
 .css-26l3qy-menu{
   margin-top: 2px !important;
-  border-radius: 0px !important;
+  border-radius: 0px 0px 4px 4px !important;
 }
 
 .css-xb97g8:hover {
