--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -521,7 +521,7 @@ input.default-otp-input {
     font-size: 14px;
   }
 
-  .completed-icon img {
+  .completed-icon {
     width: 14px;
     margin: 4px 0 0 8px;
   }
