--- a/react_webviews/src/risk_profiler/components/Style.css
+++ b/react_webviews/src/risk_profiler/components/Style.css
@@ -123,3 +123,8 @@
   line-height: 20px;
   font-weight: 400;
 }
+.risk-question {
+  font-size: 16px !important;
+  line-height: 1.5 !important;
+  margin-bottom: 10px;
+}
