--- a/react_webviews/src/help_support_v2/Style.scss
+++ b/react_webviews/src/help_support_v2/Style.scss
@@ -634,6 +634,12 @@
     }
   }
 
+  .help-answers {
+    .question {
+      font-weight: 600 !important;
+    }
+  }
+
   .send-query {
     textarea {
       width: 94%;
