Added new container in invest

--- a/react_webviews/src/dashboard/invest/components/InvestGoal/component/style.scss
+++ b/react_webviews/src/dashboard/invest/components/InvestGoal/component/style.scss
@@ -4,6 +4,14 @@
     flex-direction: column;
 }
 
+.invest-goal-container {
+    .title {
+        font-weight: 600;
+        margin-bottom: 20px;
+        line-height: 1.5;
+    }
+}
+
 .invest-goal-list-item{
     display: flex;
     padding:10px;
