--- a/react_webviews/src/dashboard/Recommendation/style.scss
+++ b/react_webviews/src/dashboard/Recommendation/style.scss
@@ -3,13 +3,15 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  padding-bottom: 30px;
 }
 
 .recommendations-header {
+  margin-top: -10px;
   display: flex;
   background-color: white;
   z-index: 2;
-  padding: 15px;
+  padding: 15px 0;
   position: absolute;
   left: 0;
   right: 0;
