--- a/react_webviews/src/dashboard/invest/Style.scss
+++ b/react_webviews/src/dashboard/invest/Style.scss
@@ -9,6 +9,7 @@
   font-size: 13px;
   color: #767e86;
   line-height: 1.5;
+  margin-top: -20px;
 }
 
 .secure-invest-bottom {
@@ -30,10 +31,10 @@
 }
 
 .invest-landing {
-  padding: 30px 0 50px 0;
+  padding-bottom: 20px;
 
   .main-top-subtitle {
-    margin-bottom: 20px;
+    margin: -20px 0 20px 0;
   }
 
   .kyc {
@@ -224,7 +225,7 @@
 }
 
 .invest-redeem {
-  padding: 30px 0;
+  padding-bottom: 30px;
 
   .title {
     margin-top: 30px;
@@ -362,13 +363,14 @@
 
 .invest-redeem-dialog {
   .dialog-content {
-    padding: 5px 0 15px 15px !important;
+    padding: 5px 15px 15px 15px !important;
     line-height: 1.5;
 
     .head-bar {
       display: flex;
       justify-content: space-between;
       align-items: flex-end;
+      margin-right: -15px;
 
       .text-left {
         color: #160d2e;
@@ -382,7 +384,6 @@
       color: #767e86;
       font-size: 14px;
       margin: 10px 0;
-      padding-right: 10px;
     }
 
     .generic-page-title {
@@ -432,10 +433,6 @@
   }
 }
 
-.insta-redeem-invest-type {
-  padding: 30px 0;
-}
-
 .header {
   display: flex;
   justify-content: space-between;
@@ -472,6 +469,7 @@
       border-radius: 5px;
       box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
       cursor: pointer;
+      min-height: 60px;
 
       img {
         width: 100%;
@@ -571,7 +569,7 @@
     margin: 0;
     background: white;
     border: none;
-    padding: 20px 0;
+    padding: 0;
 
     .content {
       cursor: pointer;
@@ -932,7 +930,7 @@
 }
 
 .sip-dates {
-  padding: 20px 0;
+  padding-bottom: 20px;
 
   .content {
     margin-top: 20px;
@@ -1002,6 +1000,13 @@
 }
 
 /// Explore Invest part ///////
+
+.invest-explore-cards {
+  .title {
+    font-weight: 600;
+    padding-bottom: 20px;
+  }
+}
 
 #invest-explore {
   .invest-explore-card {
