--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -988,3 +988,57 @@ body[data-device="mobile"] {
   background-color: var(--secondary);
 }
 
+.menu-list-dropdown{
+  display: flex;
+  align-items: center;
+  .image-icon{
+    margin-right: 15px;
+    padding-top: 20px;
+    padding-bottom: 22px;
+  }
+  .dropdown-elements{
+      width: 100%;
+      border-bottom-width: 1px;
+      border-bottom-color: #EFEDF2;
+      padding-top: 20px;
+      padding-bottom: 22px;
+      justify-content: space-between;
+      cursor: pointer;
+  }
+  .menu-title{
+    color: #160d2e;
+    font-size: 16px;
+    margin-bottom: 5px;
+    font-weight: 500;
+    flex-grow: 1;
+  }
+  .menu-subtitle{
+     color: #7e7e7e;
+     font-size: 13px;
+     font-weight: 400;
+     line-height: 15.41px;
+  }
+  .resume_flag{
+    background-color: #ff6868;
+    letter-spacing: 0.1;
+     font-size: 8px;
+     line-height: 10.06px;
+     position: relative;
+     top: -3px;
+     border-radius: 7px;
+     padding:  2px 4px;
+     margin-top: -30px;
+     color: white;
+     font-weight: 700;
+     width: 40px;
+     left: 6px;
+     height: 14px;
+  }
+}
+.header-title{
+  font-weight: 500;
+  color: #160d2e;
+  font-size: 17px;
+  line-height: 20.15px;
+  margin-bottom: 15px;
+ }
