--- a/react_webviews/src/dashboard/invest/Style.scss
+++ b/react_webviews/src/dashboard/invest/Style.scss
@@ -1053,6 +1053,10 @@
     line-height: 1.5;
   }
 
+  .top-title {
+    margin:-10px 0 20px 0;
+  }
+
   .scroll {
     display: flex;
     flex-direction: row;
