css fix in build1

--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1092,8 +1092,12 @@ body[data-device="mobile"] {
   border-radius: 0px 0px 4px 4px !important;
 }
 
-.css-xb97g8:hover {
-  background-color: #4A4A4A  !important; 
+// .css-xb97g8:hover {
+//   background-color: #4A4A4A  !important; 
+// }
+
+.css-19bqh2r:hover {
+  fill: #4A4A4A  !important; 
 }
 
 #react-select-2-input{
