--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1005,7 +1005,8 @@ body[data-device="mobile"] {
   min-height: 41px !important;
 }
 .css-1g6gooi{
-  margin-top: 3px !important;
+  margin-top: 7px !important;
+  margin-left: 4px !important;
   font-size: 13px !important;
   line-height: 21px;
 }
@@ -1025,7 +1026,7 @@ body[data-device="mobile"] {
 .css-1uccc91-singleValue{
   margin-top: 2px !important;
   color: #161A2E !important;
-  margin-left: 0px !important;
+  // margin-left: 0px !important;
   font-size: 13px;
   line-height: 21px;
   display: inline-block !important;
