--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1244,7 +1244,7 @@ body[data-device="mobile"] {
   label{
     font-size: 13px !important;
   }
-  .css-gg45go-NoOptionsMessage{
+  .css-gg45go-NoOptionsMessage, .css-1gl4k7y{
     text-align:left !important;
     color: #161A2E !important;
     font-size: 13px !important;
