--- a/react_webviews/src/help_support_v2/Style.scss
+++ b/react_webviews/src/help_support_v2/Style.scss
@@ -319,6 +319,7 @@
     padding: 20px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.07);
     margin: 0 20px 20px;
+    border-radius: 4px;
 
     .title {
       font-size: 13px;
