--- a/react_webviews/src/dashboard/diy/components/style.scss
+++ b/react_webviews/src/dashboard/diy/components/style.scss
@@ -7,6 +7,7 @@
   padding: 15px;
   align-items: center;
   margin-bottom: 10px;
+  border-top: 1px solid #e8e8e8;
 }
 
 .diy-fund-card-button {
@@ -381,6 +382,19 @@
         color: rgba(0,0,0,0.54);
       }
     }
+  }
+
+  .MuiTypography-body1 {
+    padding: 0 !important;
+  }
+
+  .fund-change-message {
+    padding: 15px;
+    font-size: 18px;
+    color: rgba(0,0,0,0.87);
+    line-height: 1.5;
+    border-top: 1px solid #e8e8e8;
+    background-color: rgb(250,250,250);
   }
 }
 
