Added background color in fundlist tab

--- a/react_webviews/src/dashboard/diy/components/style.scss
+++ b/react_webviews/src/dashboard/diy/components/style.scss
@@ -374,6 +374,7 @@
   margin: -20px;
   .MuiTabs-flexContainer {
     justify-content: flex-start;
+    background-color: rgb(250,250,250)
   }
 
   .tab-flex-container {
