QA-3395 bug fix

--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -522,7 +522,7 @@
   .report-cover-amount {
     color: #767E86;
     font-size: 14px;
-    margin: 0 0 8px 0;
+    // margin: 0 0 8px 0;
     .sub-text-bold{
       font-weight: 600;
     }
