old ticket reference added

--- a/react_webviews/src/help_support_v2/Style.scss
+++ b/react_webviews/src/help_support_v2/Style.scss
@@ -373,6 +373,14 @@
     margin: -10px 0 30px;
   }
 
+  .ticket-id {
+    font-size: 13px;
+    font-weight: 600;
+    color: #4a4a4a;
+    cursor: pointer;
+    margin: -20px 0 20px;
+  }
+
   .ticket-reply {
     width: 100%;
   }
